# sorting-visualizer

./: CMakeLists.txt
src/: main.cpp
src/algorithms/: bubble_sort.cpp  bubble_sort.h  merge_sort.cpp  merge_sort.h  quick_sort.cpp  quick_sort.h
src/core/: sort_step.h  sort_step_utils.h  step_generator.cpp  step_generator.h
src/ui/: app_window.cpp  app_window.h  array_input_widget.cpp  array_input_widget.h  sort_visualizer.cpp  sort_visualizer.h
tests/: test_bubble.cpp  test_merge.cpp  test_quick.cpp  test_step_generator.cpp
